--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": ">=8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.3"
+      "phpunit/phpunit": "^10.3",
+      "squizlabs/php_codesniffer": "^3.7"
     }
 }
