--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=8.1"
+        "php": ">8.2",
+        "ext-sodium": "*",
+        "ext-ctype": "*"
     },
     "require-dev": {
-      "phpunit/phpunit": "^10.3",
-      "squizlabs/php_codesniffer": "^3.7"
+        "phpunit/phpunit": "^10",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
