--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,30 @@
 {
-    "name": "rcsofttech85/file-handler",
-    "description": "A simple library for abstracting various file operations and providing additional helper functions for file manipulation",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "rcsofttech85\\FileHandler\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "rahul",
-            "email": "rcsofttech85@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": ">8.2",
-        "ext-sodium": "*",
-        "ext-ctype": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^10",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symfony/dotenv": "^6.3"
+  "name": "rcsofttech85/file-handler",
+  "description": "A simple library for abstracting various file operations and providing additional helper functions for file manipulation",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "rcsofttech85\\FileHandler\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "rahul",
+      "email": "rcsofttech85@gmail.com"
+    }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": ">8.2",
+    "ext-sodium": "*",
+    "ext-ctype": "*",
+    "ext-zip": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10",
+    "squizlabs/php_codesniffer": "^3.7",
+    "symfony/dotenv": "^6.3",
+    "ext-fileinfo": "*"
+  }
 }
