--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     "php": ">8.2",
     "ext-sodium": "*",
     "ext-ctype": "*",
-    "ext-zip": "*"
+    "ext-zip": "*",
+    "ext-fileinfo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^10",
     "squizlabs/php_codesniffer": "^3.7",
-    "symfony/dotenv": "^6.3",
-    "ext-fileinfo": "*"
+    "symfony/dotenv": "^6.3"
   }
 }
