--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,15 @@
     "ext-sodium": "*",
     "ext-ctype": "*",
     "ext-zip": "*",
-    "ext-fileinfo": "*"
+    "ext-fileinfo": "*",
+    "symfony/console": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^10",
     "squizlabs/php_codesniffer": "^3.7",
     "symfony/dotenv": "^6.3"
-  }
+  },
+  "bin": [
+    "bin/file-diff"
+  ]
 }
