--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,16 @@
     "ext-ctype": "*",
     "ext-zip": "*",
     "ext-fileinfo": "*",
-    "symfony/console": "^6.3"
+    "symfony/console": "^6.3",
+    "symfony/dependency-injection": "^6.3",
+    "symfony/config": "^6.3",
+    "symfony/yaml": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^10",
     "squizlabs/php_codesniffer": "^3.7",
-    "symfony/dotenv": "^6.3"
+    "symfony/dotenv": "^6.3",
+    "symfony/var-dumper": "^6.3"
   },
   "bin": [
     "bin/file-diff"
