--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "rcsofttech85\\FileHandler\\": "src/"
+      "Rcsofttech85\\FileHandler\\": "src/"
     }
   },
   "authors": [
@@ -30,7 +30,8 @@
     "phpunit/phpunit": "^10",
     "squizlabs/php_codesniffer": "^3.7",
     "symfony/dotenv": "^6.3",
-    "symfony/var-dumper": "^6.3"
+    "symfony/var-dumper": "^6.3",
+    "phpstan/phpstan": "^1.10"
   },
   "bin": [
     "bin/file-diff",
