load encrypt password from env Signed-off-by: rahul <rcsofttech85@gmail.com>
Signed-off-by: rahul <rcsofttech85@gmail.com>

--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -1,17 +1,14 @@
-parameters:
-  filename: 'movie.csv'
-  secret: 'password'
-
-
-
-
 services:
+  container:
+    class: 'Rcsofttech85\FileHandler\DependencyInjection\ServiceContainer'
+
   file_handler:
     class: 'Rcsofttech85\FileHandler\FileHandler'
 
   file_encryptor:
     class: 'Rcsofttech85\FileHandler\FileEncryptor'
-    arguments: [ '%filename%','%secret%' ]
+    arguments: [ '@container' ]
+
 
   temp_file_handler:
     class: 'Rcsofttech85\FileHandler\TempFileHandler'
