--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "symfony/console": "^6.3",
     "symfony/dependency-injection": "^6.3",
     "symfony/config": "^6.3",
-    "symfony/yaml": "^6.3"
+    "symfony/yaml": "^6.3",
+    "symfony/process": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^10",
@@ -36,6 +37,7 @@
   "bin": [
     "bin/file-diff",
     "bin/view-csv",
-    "bin/view-json"
+    "bin/view-json",
+    "bin/file-encrypt"
   ]
 }
